--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 
-spring.datasource.url=jdbc:mysql://localhost/world?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost/test_db?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=ninban1122
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
